# Circuitpython_LSM6DSV

./: LICENSE  README.md  README.rst  README.rst.license  lsm6dsv.py  pyproject.toml  requirements.txt
examples/: lsm6dsv_simpletest.py
