# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Seth Kerr for Oak Dev Tech
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-lsm6dsv"
description = "A driver library for the LSM6DSV IMU from ST Electronics"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Oak Dev Tech", email = "hello@oakdev.tech"}
]
urls = {Homepage = "https://github.com/skerr92/CircuitPython_LSM6DSV"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "lsm6dsv",
    "IMU,",
    "ST",
    "IMU,",
    "LSM6",
    "IMU,",
    "LSM6DSV",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["lsm6dsv"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
